--- a/waybar/config
+++ b/waybar/config
@@ -1,261 +1,391 @@
-// Global
-{
-    "layer": "top",
-    "position": "top",
+[
+    {
+        "name": "primary",
+        "layer": "top",
+        "position": "top",
+        "output": ["DP-1", "eDP-1"],
+        // If height property would be not present, it'd be calculated dynamically
+        "height": 30,
 
-    // If height property would be not present, it'd be calculated dynamically
-    "height": 30,
+        "modules-left": [
+            "custom/launcher",
+            "sway/workspaces",
+            "sway/mode",
+        ],
 
-    "modules-left": [
-        "custom/launcher",
-        "sway/workspaces",
-        "sway/mode",
-    ],
+        "modules-center": [
+            "cpu",
+            "memory",
+            "temperature",
+            "battery",
+            "custom/gpu-usage",
+        ],
 
-    "modules-center": [
-        "cpu",
-        "memory",
-		"temperature",
-        "battery",
-		"custom/gpu-usage",
-    ],
+        "modules-right": [
+            "network",
+            "idle_inhibitor",
+            "custom/audio_idle_inhibitor",
+            "pulseaudio",
+            //"custom/PBPbattery",
+            "backlight#icon",
+            "backlight#value",
+            "clock",
+            "tray",
+            "custom/weather",
+            "custom/power",
+        ],
 
-    "modules-right": [
-        "network",
-        "idle_inhibitor",
-		"custom/audio_idle_inhibitor",
-        "pulseaudio",
-        "custom/keyboard-layout",
-        //"custom/PBPbattery",
-        "backlight#icon",
-        "backlight#value",
-        "clock",
-        "tray",
-        "custom/weather",
-        "custom/power",
-    ],
+        // Modules
 
-    // Modules
+        "idle_inhibitor": {
+            "format": "{icon} ",
+            "format-icons":{
+                "activated": "",
+                "deactivated": ""
+            }
+        },
 
-    "idle_inhibitor": {
-        "format": "{icon} ",
-        "format-icons":{
-            "activated": "",
-            "deactivated": ""
+        "custom/audio_idle_inhibitor": {
+            "format": "{icon}",
+            "exec": "sway-audio-idle-inhibit --dry-print-both-waybar",
+            "exec-if": "which sway-audio-idle-inhibit",
+            "return-type": "json",
+            "format-icons": {
+                "output": "",
+                "input": "",
+                "output-input": "  ",
+                "none": ""
+            }
+        },
+
+        "battery": {
+            "states": {
+                "good": 70,
+                "warning": 30,
+                "critical": 15
+            },
+            "format": "{capacity}% {icon}",
+            "format-charging": "{capacity}% ",
+            "format-plugged": "{capacity}% ",
+            // "format-good": "", // An empty format will hide the module
+            // "format-full": "",
+            "format-icons": ["", "", "", "", ""]
+        },
+
+        "custom/PBPbattery": {
+            "exec": "~/.config/waybar/scripts/PBPbattery.sh",
+            "format": "{}",
+        },
+
+        "clock": {
+            "interval": 10,
+            "format-alt": " {:%e %b %Y}", // Icon: calendar-alt
+            "format": "{:%H:%M  %e %b %Y}",
+            "tooltip-format": "{:%e %B %Y}"
+        },
+
+        "cpu": {
+            "interval": 5,
+            "format": "  {usage}% ({load})", // Icon: microchip
+            "states": {
+                "warning": 70,
+                "critical": 90,
+            },
+            "on-click": "alacritty -e 'htop'",
+        },
+
+        "custom/keyboard-layout": {
+            "exec": "swaymsg -t get_inputs | grep -m1 'xkb_active_layout_name' | cut -d '\"' -f4",
+            // Interval set only as a fallback, as the value is updated by signal
+            "interval": 30,
+            "format": "  {}", // Icon: keyboard
+            // Signal sent by Sway key binding (~/.config/sway/key-bindings)
+            "signal": 1, // SIGHUP
+            "tooltip": false,
+            "on-click": "~/.config/waybar/scripts/keyhint.sh",
+        },
+
+        "memory": {
+            "interval": 5,
+            "format": " {}%", // Icon: memory
+            "on-click": "xfce4-terminal -e 'htop'",
+            "states": {
+                "warning": 70,
+                "critical": 90
+            }
+        },
+
+        "network": {
+            "interval": 5,
+            "format-wifi": "  {essid} ({signalStrength}%)", // Icon: wifi
+            "format-ethernet": "  {ifname}: {ipaddr}/{cidr}", // Icon: ethernet
+            "format-disconnected": "⚠  Disconnected",
+            "tooltip-format": "{ifname}: {ipaddr}",
+            "on-click": "xfce4-terminal -e 'nmtui'",
+        },
+        "network#vpn": {
+            "interface": "tun0",
+            "format": "  {essid} ({signalStrength}%)",
+            "format-disconnected": "⚠  Disconnected",
+            "tooltip-format": "{ifname}: {ipaddr}/{cidr}",
+        },
+
+        "sway/mode": {
+            "format": "{}",
+            "tooltip": false
+        },
+
+        "sway/window": {
+            "format": "{}",
+            "max-length": 120
+        },
+
+        "sway/workspaces": {
+            "disable-scroll": true,
+            "disable-markup" : false,
+            "all-outputs": false,
+            "format": "  {icon}  ",
+            //"format":"{icon}",
+            "format-icons": {
+            }
+        },
+
+        "pulseaudio": {
+            "scroll-step": 1, // %, can be a float
+            "format": "{volume}% {icon}",
+            "format-bluetooth": "{volume}% {icon}  {format_source}",
+            "format-bluetooth-muted": " {icon}  {format_source}",
+            "format-muted": "婢 {format_source}",
+            "format-source": "{volume}% ",
+            "format-source-muted": "",
+            "format-icons": {
+                "headphone": "",
+                "hands-free": "וֹ",
+                "headset": "  ",
+                "phone": "",
+                "portable": "",
+                "car": "",
+                "default": [""]
+            },
+            "on-click": "pavucontrol",
+            "on-scroll-up": "pactl set-sink-volume @DEFAULT_SINK@ +2%",
+            "on-scroll-down": "pactl set-sink-volume @DEFAULT_SINK@ -2%",
+        },
+
+        // to use the weather module replace <your_location> with your city or town
+        // note: do not use spaces: new york would be newyork
+        "custom/weather": {
+            "exec": "~/.config/waybar/scripts/weather.sh <your_location>",
+            "return-type": "json",
+            "interval": 600,
+        },
+
+        "tray": {
+            "icon-size": 18,
+            "spacing":10,
+        },
+
+        "temperature": {
+            "thermal-zone": 2,
+            "hwmon-path": "/sys/class/hwmon/hwmon2/temp1_input",
+            "critical-threshold": 80,
+            "format-critical": "{temperatureC}°C ",
+            "format": "{temperatureC}°C "
+        },
+
+        "backlight#icon": {
+            "format": "{icon}",
+            "format-icons": [""],
+            "on-scroll-down": "brightnessctl -c backlight set 1%-",
+            "on-scroll-up": "brightnessctl -c backlight set +1%"
+        },
+
+        "backlight#value" :{
+             "format": "{percent}%",
+             "on-scroll-down": "brightnessctl -c backlight set 1%-",
+             "on-scroll-up": "brightnessctl -c backlight set +1%"
+        },
+
+        "custom/firefox": {
+            "format": " ",
+            "on-click": "exec firefox",
+            "tooltip": false
+        },
+
+        "custom/terminal": {
+            "format": " ",
+            "on-click": "exec xfce4-terminal",
+            "tooltip": false
+        },
+
+        "custom/files": {
+            "format": " ",
+            "on-click": "exec thunar",
+            "tooltip": false
+        },
+
+        "custom/launcher": {
+            "format":" ",
+            "on-click": "exec rofi -show drun",
+            "tooltip": false,
+        },
+
+        "custom/power": {
+            "format":"⏻",
+            "on-click": "exec rofi -show power",
+            "tooltip": false,
+        },
+
+        "custom/gpu-usage": {
+            // "exec": "command -v radeontop >/dev/null 2>&1 && radeontop -d - -l 1 | tr -d '\n' | cut -s -d ',' -f3 | cut -s -d ' ' -f3 | tr -d '%' | awk '{ print $1 }' | tr -d '\n' || echo 'No radeontop'",
+            "exec": "radeontop -d - -l 1 | tr -d '\n' | cut -s -d ',' -f3 | cut -s -d ' ' -f3 | tr -d '%' | awk '{ print $1 }' | tr -d '\n'",
+            "exec-if": "command -v radeontop",
+            "format": "{}% ﬙",
+            "interval": 10,
+            "format-tooltip": "GPU Usage",
         }
     },
+    {
+        "name": "secondary",
+        "layer": "top",
+        "position": "top",
+        "output": ["!DP-1", "!eDP-1", "*"],
 
-	"custom/audio_idle_inhibitor": {
-		"format": "{icon}",
-		"exec": "sway-audio-idle-inhibit --dry-print-both-waybar",
-		"exec-if": "which sway-audio-idle-inhibit",
-		"return-type": "json",
-		"format-icons": {
-			"output": "",
-			"input": "",
-			"output-input": "  ",
-			"none": ""
-		}
-	},
+        // If height property would be not present, it'd be calculated dynamically
+        "height": 30,
 
-    "battery": {
-        "states": {
-            // "good": 95,
-            "warning": 30,
-            "critical": 15
+        "modules-left": [
+            "custom/launcher",
+            "sway/workspaces",
+            "sway/mode",
+        ],
+
+        "modules-center": [
+            "cpu",
+            "memory",
+            "battery",
+        ],
+
+        "modules-right": [
+            "custom/audio_idle_inhibitor",
+            "pulseaudio",
+            "clock",
+        ],
+
+        // Modules
+
+        "idle_inhibitor": {
+            "format": "{icon} ",
+            "format-icons":{
+                "activated": "",
+                "deactivated": ""
+            }
         },
-        "format": "{capacity}% {icon}",
-        "format-charging": "{capacity}% ",
-        "format-plugged": "{capacity}% ",
-        // "format-good": "", // An empty format will hide the module
-        // "format-full": "",
-        "format-icons": ["", "", "", "", ""]
-    },
 
-    "custom/PBPbattery": {
-        "exec": "~/.config/waybar/scripts/PBPbattery.sh",
-        "format": "{}",
-    },
-
-    "clock": {
-        "interval": 10,
-        "format-alt": " {:%e %b %Y}", // Icon: calendar-alt
-        "format": "{:%H:%M  %e %b %Y}",
-        "tooltip-format": "{:%e %B %Y}"
-    },
-
-    "cpu": {
-        "interval": 5,
-        "format": "  {usage}% ({load})", // Icon: microchip
-        "states": {
-            "warning": 70,
-            "critical": 90,
+        "custom/audio_idle_inhibitor": {
+            "format": "{icon}",
+            "exec": "sway-audio-idle-inhibit --dry-print-both-waybar",
+            "exec-if": "which sway-audio-idle-inhibit",
+            "return-type": "json",
+            "format-icons": {
+                "output": "",
+                "input": "",
+                "output-input": "  ",
+                "none": ""
+            }
         },
-        "on-click": "alacritty -e 'htop'",
-    },
 
-    "custom/keyboard-layout": {
-        "exec": "swaymsg -t get_inputs | grep -m1 'xkb_active_layout_name' | cut -d '\"' -f4",
-        // Interval set only as a fallback, as the value is updated by signal
-        "interval": 30,
-        "format": "  {}", // Icon: keyboard
-        // Signal sent by Sway key binding (~/.config/sway/key-bindings)
-        "signal": 1, // SIGHUP
-        "tooltip": false,
-        "on-click": "~/.config/waybar/scripts/keyhint.sh",
-    },
-
-    "memory": {
-        "interval": 5,
-        "format": " {}%", // Icon: memory
-        "on-click": "xfce4-terminal -e 'htop'",
-        "states": {
-            "warning": 70,
-            "critical": 90
-        }
-    },
-
-    "network": {
-        "interval": 5,
-        "format-wifi": "  {essid} ({signalStrength}%)", // Icon: wifi
-        "format-ethernet": "  {ifname}: {ipaddr}/{cidr}", // Icon: ethernet
-        "format-disconnected": "⚠  Disconnected",
-        "tooltip-format": "{ifname}: {ipaddr}",
-        "on-click": "xfce4-terminal -e 'nmtui'",
-    },
-    "network#vpn": {
-        "interface": "tun0",
-        "format": "  {essid} ({signalStrength}%)",
-        "format-disconnected": "⚠  Disconnected",
-        "tooltip-format": "{ifname}: {ipaddr}/{cidr}",
-    },
-
-    "sway/mode": {
-        "format": "{}",
-        "tooltip": false
-    },
-
-    "sway/window": {
-        "format": "{}",
-        "max-length": 120
-    },
-
-    "sway/workspaces": {
-        "disable-scroll": true,
-        "disable-markup" : false,
-        "all-outputs": false,
-        "format": "  {icon}  ",
-        //"format":"{icon}",
-        "format-icons": {
-        }
-    },
-
-    "pulseaudio": {
-        "scroll-step": 1, // %, can be a float
-        "format": "{volume}% {icon}",
-        "format-bluetooth": "{volume}% {icon}  {format_source}",
-        "format-bluetooth-muted": " {icon}  {format_source}",
-        "format-muted": "婢 {format_source}",
-        "format-source": "{volume}% ",
-        "format-source-muted": "",
-        "format-icons": {
-            "headphone": "",
-            "hands-free": "וֹ",
-            "headset": "  ",
-            "phone": "",
-            "portable": "",
-            "car": "",
-            "default": [""]
+        "battery": {
+            "states": {
+                // "good": 95,
+                "warning": 30,
+                "critical": 15
+            },
+            "format": "{capacity}% {icon}",
+            "format-charging": "{capacity}% ",
+            "format-plugged": "{capacity}% ",
+            // "format-good": "", // An empty format will hide the module
+            // "format-full": "",
+            "format-icons": ["", "", "", "", ""]
         },
-        "on-click": "pavucontrol",
-        "on-scroll-up": "pactl set-sink-volume @DEFAULT_SINK@ +2%",
-        "on-scroll-down": "pactl set-sink-volume @DEFAULT_SINK@ -2%",
-    },
 
-    // to use the weather module replace <your_location> with your city or town
-    // note: do not use spaces: new york would be newyork
-    "custom/weather": {
-        "exec": "~/.config/waybar/scripts/weather.sh <your_location>",
-        "return-type": "json",
-        "interval": 600,
-    },
+        "custom/PBPbattery": {
+            "exec": "~/.config/waybar/scripts/PBPbattery.sh",
+            "format": "{}",
+        },
 
-    "tray": {
-        "icon-size": 18,
-        "spacing":10,
-    },
+        "clock": {
+            "interval": 10,
+            "format-alt": " {:%e %b %Y}", // Icon: calendar-alt
+            "format": "{:%H:%M  %e %b %Y}",
+            "tooltip-format": "{:%e %B %Y}"
+        },
 
-	"temperature": {
-		"thermal-zone": 2,
-		"hwmon-path": "/sys/class/hwmon/hwmon2/temp1_input",
-		"critical-threshold": 80,
-		"format-critical": "{temperatureC}°C ",
-		"format": "{temperatureC}°C "
- 	},
+        "cpu": {
+            "interval": 5,
+            "format": "  {usage}% ({load})", // Icon: microchip
+            "states": {
+                "warning": 70,
+                "critical": 90,
+            },
+            "on-click": "alacritty -e 'htop'",
+        },
 
-    "backlight#icon": {
-        "format": "{icon}",
-        "format-icons": [""],
-        "on-scroll-down": "brightnessctl -c backlight set 1%-",
-        "on-scroll-up": "brightnessctl -c backlight set +1%"
-    },
+        "memory": {
+            "interval": 5,
+            "format": " {}%", // Icon: memory
+            "on-click": "xfce4-terminal -e 'htop'",
+            "states": {
+                "warning": 70,
+                "critical": 90
+            }
+        },
 
-    "backlight#value" :{
-         "format": "{percent}%",
-         "on-scroll-down": "brightnessctl -c backlight set 1%-",
-         "on-scroll-up": "brightnessctl -c backlight set +1%"
-    },
+        "sway/mode": {
+            "format": "{}",
+            "tooltip": false
+        },
 
-    "custom/firefox": {
-        "format": " ",
-        "on-click": "exec firefox",
-        "tooltip": false
-    },
+        "sway/window": {
+            "format": "{}",
+            "max-length": 120
+        },
 
-    "custom/terminal": {
-        "format": " ",
-        "on-click": "exec xfce4-terminal",
-        "tooltip": false
-    },
+        "sway/workspaces": {
+            "disable-scroll": true,
+            "disable-markup" : false,
+            "all-outputs": false,
+            "format": "  {icon}  ",
+            //"format":"{icon}",
+            "format-icons": {
+            }
+        },
 
-    "custom/files": {
-        "format": " ",
-        "on-click": "exec thunar",
-        "tooltip": false
-    },
+        "pulseaudio": {
+            "scroll-step": 1, // %, can be a float
+            "format": "{volume}% {icon}",
+            "format-bluetooth": "{volume}% {icon}  {format_source}",
+            "format-bluetooth-muted": " {icon}  {format_source}",
+            "format-muted": "婢 {format_source}",
+            "format-source": "{volume}% ",
+            "format-source-muted": "",
+            "format-icons": {
+                "headphone": "",
+                "hands-free": "וֹ",
+                "headset": "  ",
+                "phone": "",
+                "portable": "",
+                "car": "",
+                "default": [""]
+            },
+            "on-click": "pavucontrol",
+            "on-scroll-up": "pactl set-sink-volume @DEFAULT_SINK@ +2%",
+            "on-scroll-down": "pactl set-sink-volume @DEFAULT_SINK@ -2%",
+        },
 
-    "custom/launcher": {
-        "format":" ",
-        "on-click": "exec rofi -show drun",
-        "tooltip": false,
-    },
-
-    "custom/power": {
-        "format":"⏻",
-        "on-click": "exec rofi -show power",
-        "tooltip": false,
-    },
-
-	"custom/gpu-usage": {
-	  "exec": "cat /sys/class/hwmon/hwmon7/device/gpu_busy_percent",
-	  "format": "GPU: {}%",
-	  "return-type": "",
-	  "interval": 1
-	},
-
-    "custom/DP-2": {
-        "format": "DP-2🖥️",
-        "on-click": "exec swaymsg output DP-2 disable",
-        "on-scroll-down": "exec swaymsg output DP-2 disable",
-        "on-scroll-up": "exec swaymsg output DP-2 enable",
-        "tooltip": false
-    },
-
-    "custom/eDP-1": {
-        "format": "eDP-1🖥️",
-        "on-click": "exec swaymsg output eDP-1 disable",
-        "on-scroll-down": "exec swaymsg output eDP-1 disable",
-        "on-scroll-up": "exec swaymsg output DP-2 enable",
-        "tooltip": false
-    },
-}
+        "tray": {
+            "icon-size": 18,
+            "spacing":10,
+        },
+    }
+]
