--- a/tmux/tmux.new.conf
+++ b/tmux/tmux.new.conf
@@ -13,6 +13,10 @@ set -q -g status-utf8 on                  # expect UTF-8 (tmux < 2.2)
 setw -q -g utf8 on
 set -g status-position top
 
+# index
+set -g base-index 1           # start windows numbering at 1
+setw -g pane-base-index 1     # make pane numbering consistent with windows
+
 # dynamic tab rename
 set-option -g automatic-rename-format '#{?#{||:#{==:#{b:pane_current_command},nvim},#{==:#{b:pane_current_command},zsh}},#{b:pane_current_path},#{b:pane_current_command}}'
 
