--- a/tmux/tmux.new.conf
+++ b/tmux/tmux.new.conf
@@ -13,7 +13,7 @@ setw -q -g utf8 on
 
 # something
 set -s escape-time 10                     # faster command sequences
-set -sg repeat-time 100                   # timeout to add another command 
+set -sg repeat-time 100                   # timeout to add another command
 set -g status-position top
 
 # index
@@ -38,6 +38,7 @@ unbind C-a
 set -g prefix C-a
 bind-key C-a send-prefix
 
+# reload config
 bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
 
 # splits
@@ -56,6 +57,9 @@ bind -r t next-layout       # swap current pane with the previous one
 
 # maximize current pane
 bind f run 'cut -c3- ~/.tmux.conf | sh -s _maximize_pane "#{session_name}" #D'
+
+# find session
+bind C-f command-prompt -p find-session 'switch-client -t %%'
 
 # pane resizing
 bind -r H resize-pane -L 2
