--- a/tmux/tmux.new.conf
+++ b/tmux/tmux.new.conf
@@ -96,3 +96,11 @@ run -b 'tmux bind -t vi-copy H start-of-line 2> /dev/null || true'
 run -b 'tmux bind -T copy-mode-vi H send -X start-of-line 2> /dev/null || true'
 run -b 'tmux bind -t vi-copy L end-of-line 2> /dev/null || true'
 run -b 'tmux bind -T copy-mode-vi L send -X end-of-line 2> /dev/null || true'
+
+### Plugins ###
+set -g @plugin 'tmux-plugins/tpm'
+
+if "test ! -d ~/.tmux/plugins/tpm" \
+   "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
+
+run '~/.tmux/plugins/tpm/tpm'
