--- a/tmux/tmux.new.conf
+++ b/tmux/tmux.new.conf
@@ -12,7 +12,6 @@ set -q -g status-utf8 on                  # expect UTF-8 (tmux < 2.2)
 setw -q -g utf8 on
 
 # something
-set -s escape-time 10                     # faster command sequences
 set -sg repeat-time 100                   # timeout to add another command
 set -g status-position top
 
@@ -99,6 +98,7 @@ run -b 'tmux bind -T copy-mode-vi L send -X end-of-line 2> /dev/null || true'
 
 ### Plugins ###
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
 
 if "test ! -d ~/.tmux/plugins/tpm" \
    "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
