--- a/tmux/tmux.new.conf
+++ b/tmux/tmux.new.conf
@@ -78,9 +78,8 @@ bind -r L resize-pane -R 5
 # window navigation
 unbind n
 unbind p
-bind -r C-h previous-window # select previous window
-bind -r C-l next-window     # select next window
-bind Tab last-window        # move to last active window
+bind -r C-p previous-window # select previous window
+bind -r C-n next-window     # select next window
 
 # style
 setw -g window-status-current-style bg=black,fg=white,bright
