--- a/tmux/tmux.new.conf
+++ b/tmux/tmux.new.conf
@@ -59,18 +59,20 @@ bind -r h select-pane -L  # move left
 bind -r j select-pane -D  # move down
 bind -r k select-pane -U  # move up
 bind -r l select-pane -R  # move right
-bind > swap-pane -D       # swap current pane with the next one
-bind < swap-pane -U       # swap current pane with the previous one
-unbind t
-bind -r t next-layout       # swap current pane with the previous one
 
-# maximize current pane
-bind f run 'cut -c3- ~/.tmux.conf | sh -s _maximize_pane "#{session_name}" #D'
+# swap panes order
+bind > swap-pane -D
+bind < swap-pane -U
+
+# change layout (h/v)
+unbind t
+bind -r t next-layout
 
 # find session
 bind C-f command-prompt -p find-session 'switch-client -t %%'
 
 # pane resizing
+bind -r f resize-pane -Z
 bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
