--- a/tmux/tmux.new.conf
+++ b/tmux/tmux.new.conf
@@ -109,5 +109,9 @@ run '~/.tmux/plugins/tpm/tpm'
 
 set -g @tmux_power_theme 'default'
 
-bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+bind -T copy-mode-vi v send -X begin-selection
+bind -T copy-mode-vi y send -X copy-selection-and-cancel
+bind -T copy-mode-vi Escape send -X cancel
+bind -T copy-mode-vi H send -X start-of-line
+bind -T copy-mode-vi L send -X end-of-line
+bind -T copy-mode-vi t send -X rectangle-toggle
