--- a/hypr/config.d/env.conf
+++ b/hypr/config.d/env.conf
@@ -16,3 +16,6 @@ env = QT_AUTO_SCREEN_SCALE_FACTOR,1
 env = QT_QPA_PLATFORM,wayland;xcb
 env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
 env = QT_QPA_PLATFORMTHEME,qt5ct
+
+# GTK Variables
+env = GTK_THEME,Adwaita:dark
