--- a/hypr/config.d/env.conf
+++ b/hypr/config.d/env.conf
@@ -17,5 +17,5 @@ env = QT_QPA_PLATFORM,wayland;xcb
 env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
 env = QT_QPA_PLATFORMTHEME,qt5ct
 
-# GTK Variables
-env = GTK_THEME,Adwaita:dark
+# GTK Variables, just to make things dark
+env = GTK_THEME,:dark
