--- a/chromium/chrome-flags.conf
+++ b/chromium/chrome-flags.conf
@@ -1,4 +1,8 @@
---ignore-gpu-blocklist
---enable-zero-copy
 --enable-features=UseOzonePlatform
 --ozone-platform=wayland
+--ignore-gpu-blocklist
+--enable-zero-copy
+--use-gl=angle
+--use-angle=vulkan
+--enable-accelerated-video-decode
+--enable-features=Vulkan,VulkanFromANGLE,DefaultANGLEVulkan,VaapiIgnoreDriverChecks,VaapiVideoDecoder,PlatformHEVCDecoderSupport
