--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -4,27 +4,23 @@ draw_bold_text_with_bright_colors = true
 [env]
 TERM = "xterm-256color"
 
-[shell]
-args = ["-l", "-c", "source ~/.zshrc; tmux-smart"]
-program = "/bin/zsh"
-
 [font]
 size = 10.0
 
 [font.bold]
-family = "JetBrains Mono"
+family = "JetBrainsMono Nerd Font"
 style = "Bold"
 
 [font.bold_italic]
-family = "JetBrains Mono"
+family = "JetBrainsMono Nerd Font"
 style = "Bold Italic"
 
 [font.italic]
-family = "JetBrains Mono"
+family = "JetBrainsMono Nerd Font"
 style = "Italic"
 
 [font.normal]
-family = "JetBrains Mono"
+family = "JetBrainsMono Nerd Font"
 style = "Regular"
 
 [font.offset]
@@ -113,6 +109,10 @@ mods = "Shift"
 [[mouse.bindings]]
 action = "PasteSelection"
 mouse = "Middle"
+
+[shell]
+args = ["-c", "source ~/.zshrc; tmux-smart"]
+program = "/bin/zsh"
 
 [window]
 dynamic_padding = true
