--- a/hypr/config.d/env.conf
+++ b/hypr/config.d/env.conf
@@ -18,4 +18,4 @@ env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
 env = QT_QPA_PLATFORMTHEME,qt5ct
 
 # GTK Variables, just to make things dark
-env = GTK_THEME,:dark
+env = GTK_THEME,FlatColor:dark
