--- a/kanshi/config
+++ b/kanshi/config
@@ -5,7 +5,13 @@ profile {
 
 profile {
 	output eDP-1 disable
-	output HDMI-1 mode 1920x1080 position 0,0
+	output HDMI-A-1 mode 1920x1080 position 0,0 transform 0
+}
+
+profile {
+    output eDP-1 disable
+    output HDMI-A-1 mode 1920x1080 position 0,0 transform 90
+    output DP-1 mode 2560x1440 position 1080,0 transform 0
 }
 
 profile {
