--- a/hypr/config.d/general.conf
+++ b/hypr/config.d/general.conf
@@ -19,12 +19,11 @@ decoration {
     rounding = 10
 
     blur {
-        enabled = true
-        size = 3
-        passes = 1
+        enabled = false
     }
 
-    drop_shadow = true
+    drop_shadow = false
+
     shadow_range = 4
     shadow_render_power = 3
     col.shadow = $color0
@@ -63,6 +62,7 @@ gestures {
 }
 
 misc {
+    vfr = true
     disable_hyprland_logo = true
     force_default_wallpaper = 0
     mouse_move_enables_dpms = true
