--- a/hypr/config.d/rules.conf
+++ b/hypr/config.d/rules.conf
@@ -4,7 +4,7 @@
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 
-windowrulev2=move 0 0,title:^(flameshot)
-windowrulev2=nofullscreenrequest,title:^(flameshot)
+# flameshot
 windowrulev2=float,title:^(flameshot)
-windowrulev2=noborder,title:^(flameshot)
+windowrulev2=move 0 0,title:^(flameshot)
+windowrulev2=suppressevent fullscreen,title:^(flameshot)
