--- a/hypr/config.d/exec-once.conf
+++ b/hypr/config.d/exec-once.conf
@@ -1,6 +1,6 @@
 # basic
 exec-once = waybar
-exec-once = swww init
+exec-once = swww-daemon
 exec-once = mako
 exec-once = kanshi
 exec-once = arch-audit-gtk
