--- a/hypr/config.d/input.conf
+++ b/hypr/config.d/input.conf
@@ -31,3 +31,8 @@ device {
     accel_profile = custom
     scroll_points =  0.2 0.0 0.5 1 1.2 1.5
 }
+
+device {
+    name = compx-vgn-mouse-2.4g-receiver-1
+    sensitivity = -0.5
+}
