--- a/kanshi/config
+++ b/kanshi/config
@@ -18,6 +18,10 @@ profile {
 	output LVDS-1 enable
 }
 
-profile {
+profile lap {
 	output eDP-1 enable
+}
+
+profile cinema {
+    output HDMI-1 enable
 }
